name:                pure
version:             0.1.0.0
synopsis:            Push relay for Github repositories.
description:         Automatically push Github commits to a remote repository.
homepage:            https://github.com/shmookey/pure
license:             BSD3
license-file:        LICENSE
author:              Luke A Williams
maintainer:          shmookey@shmookey.net
copyright:           2016 Luke A Williams
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Monad.RelMonad
                     , Monad.Result
                     , Rel.Cmd
                     , Rel.FS
                     , Rel.Git
                     , Rel.Github
                     , Rel.Log
                     , Util.Request
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , case-insensitive
                     , containers
                     , directory
                     , http-types
                     , process
                     , split
                     , strict
                     , text
                     , time
                     , wai
  default-language:    Haskell2010

executable pure
  hs-source-dirs:      app
  main-is:             App.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, pure
                     , bytestring
                     , aeson
                     , case-insensitive
                     , configurator
                     , containers
                     , data-ordlist
                     , hdaemonize
                     , http-types
                     , optparse-applicative
                     , random
                     , split
                     , SHA
                     , strict
                     , text
                     , unix
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shmookey/pure
